[gd_scene load_steps=16 format=3 uid="uid://bch7w7cwxwqsn"]

[ext_resource type="Script" path="res://addons/event_sheet/source/elements/event_sheet/event_sheet/event_sheet.gd" id="1_vq26q"]
[ext_resource type="Texture2D" uid="uid://3aayah87ti8k" path="res://addons/event_sheet/resources/icons/divider.svg" id="2_52akj"]
[ext_resource type="Texture2D" uid="uid://0uvfcu7l4d1g" path="res://addons/event_sheet/resources/icons/divider_null.png" id="3_a8irr"]
[ext_resource type="Script" path="res://addons/event_sheet/source/elements/event_sheet/event_sheet/event_list.gd" id="4_8ofs3"]
[ext_resource type="Script" path="res://addons/event_sheet/source/elements/event_sheet/code_editor/code_edit.gd" id="4_241l8"]
[ext_resource type="Script" path="res://addons/event_sheet/source/elements/window/window.gd" id="5_f3m08"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kxnoh"]
bg_color = Color(0.0344663, 0.0419983, 0.0545548, 1)

[sub_resource type="CodeHighlighter" id="CodeHighlighter_h1kcp"]
number_color = Color(0.631373, 1, 0.878431, 1)
symbol_color = Color(0.670588, 0.788235, 1, 1)
function_color = Color(0.341176, 0.701961, 1, 1)
member_variable_color = Color(0.737255, 0.878431, 1, 1)
keyword_colors = {
"False": Color(1, 0.439216, 0.521569, 1),
"True": Color(1, 0.439216, 0.521569, 1),
"and": Color(1, 0.439216, 0.521569, 1),
"bool": Color(1, 0.439216, 0.521569, 1),
"break": Color(1, 0.54902, 0.8, 1),
"case": Color(1, 0.54902, 0.8, 1),
"catch": Color(1, 0.439216, 0.521569, 1),
"char": Color(1, 0.439216, 0.521569, 1),
"class": Color(1, 0.439216, 0.521569, 1),
"const": Color(1, 0.439216, 0.521569, 1),
"continue": Color(1, 0.54902, 0.8, 1),
"def": Color(1, 0.439216, 0.521569, 1),
"default": Color(1, 0.54902, 0.8, 1),
"double": Color(1, 0.439216, 0.521569, 1),
"echo": Color(1, 0.439216, 0.521569, 1),
"elif": Color(1, 0.54902, 0.8, 1),
"export": Color(1, 0.439216, 0.521569, 1),
"extends": Color(1, 0.439216, 0.521569, 1),
"false": Color(1, 0.439216, 0.521569, 1),
"final": Color(1, 0.439216, 0.521569, 1),
"finally": Color(1, 0.439216, 0.521569, 1),
"float": Color(1, 0.439216, 0.521569, 1),
"for": Color(1, 0.54902, 0.8, 1),
"foreach": Color(1, 0.54902, 0.8, 1),
"func": Color(1, 0.439216, 0.521569, 1),
"function": Color(1, 0.439216, 0.521569, 1),
"if": Color(1, 0.54902, 0.8, 1),
"import": Color(1, 0.439216, 0.521569, 1),
"in": Color(1, 0.439216, 0.521569, 1),
"int": Color(1, 0.439216, 0.521569, 1),
"internal": Color(1, 0.439216, 0.521569, 1),
"let": Color(1, 0.439216, 0.521569, 1),
"method": Color(1, 0.439216, 0.521569, 1),
"not": Color(1, 0.439216, 0.521569, 1),
"null": Color(1, 0.439216, 0.521569, 1),
"or": Color(1, 0.439216, 0.521569, 1),
"pass": Color(1, 0.54902, 0.8, 1),
"print": Color(1, 0.439216, 0.521569, 1),
"private": Color(1, 0.439216, 0.521569, 1),
"return": Color(1, 0.54902, 0.8, 1),
"static": Color(1, 0.439216, 0.521569, 1),
"string": Color(1, 0.439216, 0.521569, 1),
"super": Color(1, 0.439216, 0.521569, 1),
"switch": Color(1, 0.54902, 0.8, 1),
"this": Color(1, 0.439216, 0.521569, 1),
"throw": Color(1, 0.439216, 0.521569, 1),
"true": Color(1, 0.439216, 0.521569, 1),
"try": Color(1, 0.439216, 0.521569, 1),
"undefined": Color(1, 0.439216, 0.521569, 1),
"var": Color(1, 0.439216, 0.521569, 1),
"void": Color(1, 0.439216, 0.521569, 1),
"while": Color(1, 0.54902, 0.8, 1)
}
color_regions = {
"\" \"": Color(1, 0.929412, 0.631373, 1),
"#": Color(0.803922, 0.811765, 0.823529, 0.501961),
"' '": Color(1, 0.929412, 0.631373, 1),
"/* */": Color(0.803922, 0.811765, 0.823529, 0.501961),
"//": Color(0.803922, 0.811765, 0.823529, 0.501961),
"< >": Color(0.854902, 0.647059, 0.12549, 1)
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xepe3"]
bg_color = Color(0, 0, 0, 0.784314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nfbnt"]
bg_color = Color(0.062666, 0.0763605, 0.0991905, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqunu"]
bg_color = Color(0, 0, 0, 0.392157)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d36lc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_to4dl"]
bg_color = Color(0, 0, 0, 0.490196)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8evaa"]
bg_color = Color(0, 0, 0, 0.588235)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j1hlp"]
bg_color = Color(0, 0, 0, 0.392157)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Event Sheet" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_kxnoh")
script = ExtResource("1_vq26q")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/autohide = 0
theme_override_icons/grabber = ExtResource("2_52akj")
theme_override_icons/h_grabber = ExtResource("2_52akj")
theme_override_icons/v_grabber = ExtResource("2_52akj")

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 3
vertical_scroll_mode = 2

[node name="HBoxContainer" type="VBoxContainer" parent="HSplitContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="HSplitContainer" type="HSplitContainer" parent="HSplitContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 0
theme_override_constants/autohide = 0
theme_override_icons/grabber = ExtResource("3_a8irr")
theme_override_icons/h_grabber = ExtResource("3_a8irr")
theme_override_icons/v_grabber = ExtResource("3_a8irr")
split_offset = -400

[node name="Events" type="VBoxContainer" parent="HSplitContainer/ScrollContainer/HBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
mouse_filter = 2
script = ExtResource("4_8ofs3")

[node name="Actions" type="VBoxContainer" parent="HSplitContainer/ScrollContainer/HBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
mouse_filter = 2

[node name="CodeEdit" type="CodeEdit" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
editable = false
caret_blink = true
syntax_highlighter = SubResource("CodeHighlighter_h1kcp")
highlight_all_occurrences = true
draw_tabs = true
line_folding = true
gutters_draw_breakpoints_gutter = true
gutters_draw_line_numbers = true
gutters_zero_pad_line_numbers = true
gutters_draw_fold_gutter = true
code_completion_enabled = true
indent_automatic = true
auto_brace_completion_enabled = true
script = ExtResource("4_241l8")

[node name="PopupMenu" type="PopupMenu" parent="."]
size = Vector2i(98, 35)
item_count = 1
item_0/text = "Add Event"

[node name="Window" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_f3m08")

[node name="Background" type="Panel" parent="Window"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xepe3")

[node name="WindowPanel" type="Panel" parent="Window"]
custom_minimum_size = Vector2(330, 210)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -310.0
offset_top = -188.0
offset_right = 310.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nfbnt")

[node name="MarginContainer" type="MarginContainer" parent="Window/WindowPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Window/WindowPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="WindowName" type="Label" parent="Window/WindowPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Add condition"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="Window/WindowPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_bqunu")

[node name="Buttons" type="HBoxContainer" parent="Window/WindowPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Cancel" type="Button" parent="Window/WindowPanel/MarginContainer/VBoxContainer/Buttons"]
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_d36lc")
theme_override_styles/hover = SubResource("StyleBoxFlat_to4dl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8evaa")
theme_override_styles/normal = SubResource("StyleBoxFlat_j1hlp")
text = "Cancel"

[node name="Help" type="Button" parent="Window/WindowPanel/MarginContainer/VBoxContainer/Buttons"]
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_d36lc")
theme_override_styles/hover = SubResource("StyleBoxFlat_to4dl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8evaa")
theme_override_styles/normal = SubResource("StyleBoxFlat_j1hlp")
text = "Help"

[node name="Back" type="Button" parent="Window/WindowPanel/MarginContainer/VBoxContainer/Buttons"]
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_stretch_ratio = 20.0
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_d36lc")
theme_override_styles/hover = SubResource("StyleBoxFlat_to4dl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8evaa")
theme_override_styles/normal = SubResource("StyleBoxFlat_j1hlp")
text = "Back"

[node name="Next" type="Button" parent="Window/WindowPanel/MarginContainer/VBoxContainer/Buttons"]
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_stretch_ratio = 0.0
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_d36lc")
theme_override_styles/hover = SubResource("StyleBoxFlat_to4dl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8evaa")
theme_override_styles/normal = SubResource("StyleBoxFlat_j1hlp")
text = "Next"

[node name="Finish" type="Button" parent="Window/WindowPanel/MarginContainer/VBoxContainer/Buttons"]
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_stretch_ratio = 0.0
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_d36lc")
theme_override_styles/hover = SubResource("StyleBoxFlat_to4dl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8evaa")
theme_override_styles/normal = SubResource("StyleBoxFlat_j1hlp")
text = "Finish"

[connection signal="theme_changed" from="." to="." method="_on_theme_changed"]
[connection signal="gui_input" from="HSplitContainer/ScrollContainer" to="." method="_on_scroll_container_gui_input"]
[connection signal="text_changed" from="HSplitContainer/CodeEdit" to="HSplitContainer/CodeEdit" method="_on_text_changed"]
[connection signal="index_pressed" from="PopupMenu" to="." method="_on_popup_menu_index_pressed"]
[connection signal="theme_changed" from="Window" to="Window" method="_on_theme_changed"]
[connection signal="button_up" from="Window/WindowPanel/MarginContainer/VBoxContainer/Buttons/Cancel" to="Window" method="_on_cancel_button_up"]
[connection signal="button_up" from="Window/WindowPanel/MarginContainer/VBoxContainer/Buttons/Help" to="Window" method="_on_help_button_up"]
[connection signal="button_up" from="Window/WindowPanel/MarginContainer/VBoxContainer/Buttons/Back" to="Window" method="_on_back_button_up"]
[connection signal="button_up" from="Window/WindowPanel/MarginContainer/VBoxContainer/Buttons/Next" to="Window" method="_on_next_button_up"]
